--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
     </nav>
 
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>LOGIN</h2>
         <form method="post" action="/login">
             <div class="form-group">
                 <label for="username">Username</label>
